Fix idea card spacing
- Fill all of height of idea card on home page
- Fix IE Jank spacing

--- a/src/app.css
+++ b/src/app.css
@@ -2,7 +2,7 @@
 
 .idea-card {
     width: 256px;
-    max-height: 376px;
+    height: 376px;
 }
 
 .idea-card-image {
